--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ bin-release/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+node_modules/@babel/compat-data/LICENSE
+node_modules
+package-lock.json
